Fix main alignment of content & logo

--- a/js/src/app.css
+++ b/js/src/app.css
@@ -31,6 +31,11 @@ h1 {
     font-size: 2.5rem;
 }
 
+#content-container h1:first-child {
+    margin-top: 0.4rem;
+    margin-bottom: 1.9rem;
+}
+
 a,
 .btn-link {
     color: #00a2e2;
