--- a/js/src/styles/sidebar.css
+++ b/js/src/styles/sidebar.css
@@ -66,11 +66,11 @@
     text-align: center;
 }
 
-#sidebar a.dropdown-toggle+ul {
+#sidebar a.dropdown-toggle + ul {
     background: rgba(0, 0, 0, 0.05);
 }
 
-#sidebar a.dropdown-toggle+ul.show {
+#sidebar a.dropdown-toggle + ul.show {
     background: rgba(0, 0, 0, 0.16);
 }
 
@@ -80,7 +80,7 @@
     align-items: flex-end;
     padding: 1em;
     margin-top: 1em;
-    margin-bottom: 2px;
+    margin-bottom: 1em;
     margin-right: 36.5px;
     white-space: nowrap;
 }
